# usefulmacros

./: CMToLab.C  CMakeLists.txt  COMPAREROOT.py  EkinToCM.C  PlabToCM.C  README.md  compareRootFiles.C  compareRootFiles.py
